# agent

./: .dockerignore  .gitignore  .vmware_vms  CLAUDE.md  CONTRIBUTING.md  Central_Dispatch_Architecture.md  Dockerfile  GEMINI.md  Implementation_Plan.md  Makefile  Module_IO.md  README-jp.md  README-zh.md  README.md  docker-compose.yml  hub.README.md  pyproject.toml  requirements.txt  setup.py  test_vmware.py
.github/: auto_assign.yml  dependabot.yml
CHANGELOGS/: v0.2.0-release.md  v0.2.1-release.md  v0.2.2-release.md  v0.2.3-release.md  v0.3.0-release.md  v0.4.0-release.md  v0.5.0-release.md  v0.6.0-release.md  v0.7.0-release.md  v0.7.1-release.md  v0.7.2-release.md  v0.7.3-release.md  v0.7.4-release.md  v0.7.5-release.md  v0.7.6-release.md  v0.8.0-release.md  v0.8.1-release.md  v0.8.2-release.md  v0.8.3-release.md  v0.8.4-release.md  v0.8.5-release.md
dockerfile/: api.Dockerfile
docs/: STORAGE_MIGRATION.md  agent_service_models.md  destroy_sandbox_usage.md  docker-compose-prometheus.yml  grafana-dashboard-guide.md  prometheus-alert-rules.yml  prometheus-implementation-summary.md  prometheus.yml  restful_api.md
evaluation_examples/: setup_config.json  software_list.txt  test_part1.json  test_part2.json  test_random_100.json  test_random_30.json  test_random_30_regression_15.json  test_tiny-1.json  test_tiny-answer_question.json  test_tiny-chrome-1.json  test_tiny-command.json  test_tiny.json  test_tiny_windows.json  test_ubuntu_custom.json
examples/: dispatcher_advanced_features.py  dispatcher_basic_usage.py  mcp_client_example.py  restful_client_example.py
gui_agents/: .env.example  MCP_README.md  __init__.py  access_tokens.txt  cli_app.py  cli_app3.py  cli_app_maestro.py  grpc_app.py  mcp_app.py  osworld_run_maestro.py  restful_app.py  test_runner3.py
osworld_setup/: OSWorld.md  README.md  lib_run_single.py  run.py  screenshot_converter.py  test_vmware.py
scripts/: covert_dependencies.py  verify_mcp.py
tests/: test_api_masking.py  test_destroy_sandbox.py  test_execution_statistics.py  test_global_instance.py  test_grpc_config.py  test_grpc_memory_leak.py  test_hardware_interface.py  test_hardware_interface_pyautogui.py  (+7 more)
(+241 files in other folders)
