[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "lybic-guiagents"
version = "1.0.0"
authors = [
  { name="Lybic Development Team", email="lybic@tingyutech.com" },
]
description = "An open-source agentic framework that enables AI to use computers like humans and can provide a multi-agent runtime environment as an infrastructure capability"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "numpy",
    "backoff",
    "pandas",
    "openai",
    "anthropic",
    "zhipuai",
    "groq",
    "boto3",
    "paddleocr",
    "paddlepaddle",
    "together",
    "scikit-learn",
    "tiktoken",
    "pyautogui~=0.9.54",
    "toml",
    "exa_py",
    "pytesseract",
    "google-genai",
    "python-dotenv",
    "Pillow>=11.3.0",
    "gymnasium~=0.28.1",
    "requests~=2.31.0",
    "pytz~=2024.1",
    "opencv-python~=4.8.1.78",
    "matplotlib~=3.7.4",
    "psutil~=5.9.6",
    "tqdm~=4.65.0",
    "flask~=3.0.0",
    "requests-toolbelt~=1.0.0",
    "lxml",
    "cssselect",
    "xmltodict",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "pypdf",
    "PyGetWindow",
    "rapidfuzz",
    "pyacoustid",
    "ImageHash",
    "scikit-image",
    "librosa",
    "pymupdf",
    "chardet",
    "playwright",
    "formulas",
    "pydrive",
    "fastdtw",
    "odfpy",
    "func-timeout",
    "beautifulsoup4",
    "google-generativeai",
    "PyYaml",
    "mutagen",
    "easyocr",
    "borb",
    "pypdf2",
    "pdfplumber",
    "wandb",
    "wrapt_timeout_decorator",
    "gdown",
    "azure-identity",
    "azure-mgmt-compute",
    "azure-mgmt-network",
    "docker",
    "dotenv",
    "lybic>=0.7.0",
    'pyobjc; platform_system == "Darwin"',
    'pywinauto; platform_system == "Windows"',
    'pywin32; platform_system == "Windows"',
    "tldextract>=5.3.0",
]
[project.optional-dependencies]
dev = [
    "pytest",
]
grpc = [
    "grpcio",
    "grpcio-tools>=1.71.2",
]
